--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
         <span></span>
         <span></span>
         <span></span>
+        <span></span>
+        <span></span>
 
         <div class="container">
            <div> <img src="imagens/foto1.png" 
@@ -184,18 +186,18 @@
             olhos e cabelos castanhos escuro" 
             class="foto">
            <h1>Johann Moscoso</h1>
-           <p>Desenvolvedor Frontend</p>
+           <h2>Desenvolvedor Frontend</h2>
            <ul>
-            <li>
-             <a href="https://github.com/johannmscs" target="_blank">GitHub</a> 
+            <li > 
+             <a href="https://github.com/johannmscs" target="_blank"><span>GitHub</span> <i></i></a> 
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/johann-moscoso-67a403226/?original_referer=" target="_blank">Linkedin</a>
+                <a href="https://www.linkedin.com/in/johann-moscoso-67a403226/?original_referer=" target="_blank"><span>Linkedin </span> <i></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/johann_mscs/" target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/johann_mscs/" target="_blank"> <span>Instagram</span> <i></i></a>
                 
-            </li> 
+            </li>
            </ul>
            <footer>© 2022 - Johann Moscoso</footer>
             
