my links finalizado

--- a/index.html
+++ b/index.html
@@ -174,9 +174,11 @@
         <span></span>
         <span></span>
         <span></span>
-
-        
-
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
 
         <div class="container">
            <div> <img src="imagens/foto1.png" 
